--- a/Scripts/mesopelagic.results.Rmd
+++ b/Scripts/mesopelagic.results.Rmd
@@ -10,6 +10,7 @@ output: github_document
 ```{r}
 library(tidyverse)
 library(data.table)
+library(viridisLite)
 ```
 
 
@@ -67,6 +68,7 @@ noncommerical_predators
 
 diet_under_0.05 <- c(Cal_bal$Group[15], Cal_bal$Group[18], Cal_bal$Group[28], Cal_bal$Group[37], Cal_bal$Group[43:47], Cal_bal$Group[50], Cal_bal$Group[52:53], Cal_bal$Group[55], Cal_bal$Group[58:59], Cal_bal$Group[60], Cal_bal$Group[65:67], Cal_bal$Group[69],Cal_bal$Group[72:73], Cal_bal$Group[77:80], Cal_bal$Group[82], Cal_bal$Group[86:88])
 diet_under_0.05
+
 #Diet proportion of mesopelagic fish equal to or greater than 0.05
 diet_over_0.05 <- c(Cal_bal$Group[29], Cal_bal$Group[33], Cal_bal$Group[38], Cal_bal$Group[42], Cal_bal$Group[48], Cal_bal$Group[51], Cal_bal$Group[54], Cal_bal$Group[56], Cal_bal$Group[63], Cal_bal$Group[70], Cal_bal$Group[76], Cal_bal$Group[85])
 diet_over_0.05
@@ -85,6 +87,8 @@ rsim.plot(run0,all_species)
 scene1 <- base_sim_scene
 identical(scene0, scene1)
 
+temp= frate.table(scene0)
+temp
 ```
 
 #MODEL 1: IGNORING BYCATCH 
@@ -122,11 +126,11 @@ run_1.0
 # helper function to look up the ending biomass of a scenario
 end_biomass <- function(rsim){return(rsim$out_BB[dim(rsim$out_BB)[1], 2:(dim(rsim$out_BB)[2])])}
 end_biomass
-scene2 <- base_sim_scene
-scene2 <- adjust.fishing(scene2, "FRATE", "Anchovy", 2000:2020, value=2.0)
-scene2 <- adjust.fishing(scene2, "FRATE", "Sardine", 2020:2050, value=1.0)
-run2   <- rsim.run(scene2, method='AB', years=yearlist)
-rsim.plot(run2,all_species) 
+#scene2 <- base_sim_scene
+#scene2 <- adjust.fishing(scene2, "FRATE", "Anchovy", 2000:2020, value=2.0)
+#scene2 <- adjust.fishing(scene2, "FRATE", "Sardine", 2020:2050, value=1.0)
+#run2   <- rsim.run(scene2, method='AB', years=yearlist)
+#rsim.plot(run2,all_species) 
 
 end_biomass(run2)['mesopelagics']
 ```
@@ -209,6 +213,20 @@ scale_color_viridis(discrete = TRUE, option = "inferno")+
 theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
 plot3_3
+
+plot3_4 <- data_3 %>% filter(spp == diet_over_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot3_4
+
+plot3_5 <- data_3 %>% filter(spp == diet_under_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot3_5
 ```
 
 #Change overtime plot for 100% depletion
@@ -222,35 +240,84 @@ change_3_overtime_df <- function(species) {
   value <- (specieyearlast/specieyear3)
   cbind(species, value)
 }
-change_overtime_plot(mammals)
-change_overtime_plot(pred_fish)
-change_overtime_plot(predators_mesopelagic)
-change_overtime_plot(commercial_predators)
-change_overtime_plot(noncommerical_predators)
-change_overtime_plot(diet_over_0.05)
-change_overtime_plot(diet_under_0.05)
 
-change_3_df<- change_3_overtime_df(diet_over_0.05)
-change_3_df <- as.data.frame(change_3_df)
-change_3_final <- change_3_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+#3.1: Commercial
 
-nb.cols <- 12
+change_3_1_df<- change_3_overtime_df(commercial_predators)
+change_3_1_df <- as.data.frame(change_3_1_df)
+change_3_1 <- change_3_1_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
 
-try <- change_3_final %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+change_3_1_plot <- change_3_1 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
 xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
 theme(axis.line = element_line(colour = "black")) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
 theme(plot.title= element_text(hjust=.5)) + 
 theme(legend.position= "none")  
-try
+change_3_1_plot
+
+#3.2: Noncommercial
+
+change_3_2_df<- change_3_overtime_df(noncommerical_predators)
+change_3_2_df <- as.data.frame(change_3_2_df)
+change_3_2 <- change_3_2_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_3_2_plot <- change_3_2 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_3_2_plot
+
+#3.3: Mesopelagic predators
+
+change_3_3_df<- change_3_overtime_df(predators_mesopelagic)
+change_3_3_df <- as.data.frame(change_3_3_df)
+change_3_3 <- change_3_3_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use have to add in 0 for mesopelagics 
+change_3_3_plot <- change_3_3 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_3_3_plot
+
+#3.4: Diet over 0.05
+change_3_4_df<- change_3_overtime_df(diet_over_0.05)
+change_3_4_df <- as.data.frame(change_3_4_df)
+change_3_4 <- change_3_4_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_3_4_plot <- change_3_4 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_3_4_plot
+
+#3.5: Diet under 0.05 
+
+change_3_5_df<- change_3_overtime_df(diet_under_0.05)
+change_3_5_df <- as.data.frame(change_3_5_df)
+change_3_5 <- change_3_5_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use you need to add a value at 0 for mesopelagics! 
+change_3_5_plot <- change_3_5 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D") +
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_3_5_plot
+
 ```
 
 #80% DEPLETION LEVEL!! 
 # After the year 2000, run each year separately, setting each year's target
 
 ```{r}
-
-#The issue was: We were running the initial run for the entire time series so the rsim.step was tryign to overwrite the data that was already there, when running a multistep run your initial run is up to the point of your first break
 
 target_sp <- "mesopelagics"
 target_F <- 0.80
@@ -292,7 +359,7 @@ rsim.plot.fun <- function(Rsim.output, spname, indplot = F, ...){
   rel.bio
 } 
 
-names_spp<- run0$params$spname[2:94]
+names_spp<- run4$params$spname[2:94]
 
 #Need to make z into data frame, before was matrix, names is for data frame not matrix
 #Ways to do this in tidy verse but this is quick fix
@@ -305,17 +372,128 @@ z_4$month <- 1:252
 #This vectors adds in the month
 data_4 <- gather(z_4, key = spp, value = biomass, -month )
 
-plot <- data_4 %>% filter(spp == c("Market squid", "Sardine", "Anchovy", "Herring", "Pacific Mackerel", "Sand lance", "Whitebait smelt", "Other smelt", "Saury")) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
-scale_colour_brewer(palette = "Paired") +
+plot4_1 <- data_4 %>% filter(spp == commercial_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
 theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno") +
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+plot4_1
+
+plot4_2 <- data_4 %>% filter(spp == noncommerical_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
 theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
-plot
+plot4_2
+
+plot4_3 <- data_4 %>% filter(spp == predators_mesopelagic) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot4_3
+
+plot4_4 <- data_4 %>% filter(spp == diet_over_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot4_4
+
+plot4_5 <- data_3 %>% filter(spp == diet_under_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot4_5
+```
+
+#Change overtime plot for 80% depletion
+```{r}
+change_4_overtime_df <- function(species) {
+  x = seq(0,1, length.out = length(species))
+  color = viridis(n = length(species), option= "B")
+  par(mar = c(6,12,2,4))
+  specieyear4 = run4$annual_BB[1, species]
+  specieyearlast = run4$annual_BB[length(yearlist), species]
+  value <- (specieyearlast/specieyear4)
+  cbind(species, value)
+}
+
+#3.1: Commercial
+
+change_4_1_df<- change_4_overtime_df(commercial_predators)
+change_4_1_df <- as.data.frame(change_4_1_df)
+change_4_1 <- change_4_1_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_4_1_plot <- change_4_1 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_4_1_plot
+
+#3.2: Noncommercial
+
+change_4_2_df<- change_4_overtime_df(noncommerical_predators)
+change_4_2_df <- as.data.frame(change_4_2_df)
+change_4_2 <- change_4_2_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_4_2_plot <- change_4_2 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_4_2_plot
+
+#3.3: Mesopelagic predators
+
+change_4_3_df<- change_4_overtime_df(predators_mesopelagic)
+change_4_3_df <- as.data.frame(change_3_4_df)
+change_4_3 <- change_4_3_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use have to add in 0 for mesopelagics 
+change_4_3_plot <- change_4_3 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_4_3_plot
+
+#3.4: Diet over 0.05
+change_4_4_df<- change_4_overtime_df(diet_over_0.05)
+change_4_4_df <- as.data.frame(change_4_4_df)
+change_4_4 <- change_4_4_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_4_4_plot <- change_4_4 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_4_4_plot
+
+#3.5: Diet under 0.05 
+
+change_4_5_df<- change_4_overtime_df(diet_under_0.05)
+change_4_5_df <- as.data.frame(change_4_5_df)
+change_4_5 <- change_4_5_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use you need to add a value at 0 for mesopelagics! 
+change_4_5_plot <- change_4_5 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D") +
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_4_5_plot
 ```
 
 #DEPLETION LEVEL OF 50%
 ```{r}
-
 target_sp <- "mesopelagics"
 target_F <- 0.50
 names(target_F) <- target_sp 
@@ -369,14 +547,125 @@ z_5$month <- 1:252
 #This vectors adds in the month
 data_5 <- gather(z_5, key = spp, value = biomass, -month )
 
-plot1 <- data_5 %>% filter(spp == c("Market squid", "Sardine", "Anchovy", "Herring", "Pacific Mackerel", "Sand lance", "Whitebait smelt", "Other smelt", "Saury")) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
-scale_colour_brewer(palette = "Paired") +
+plot5_1 <- data_5 %>% filter(spp == commercial_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
 theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno") +
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+plot5_1
+
+plot5_2 <- data_5 %>% filter(spp == noncommerical_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
 theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
-plot1
+plot5_2
 
+plot5_3 <- data_5 %>% filter(spp == predators_mesopelagic) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot5_3
 
+plot5_4 <- data_5 %>% filter(spp == diet_over_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot5_4
+
+plot5_5 <- data_5 %>% filter(spp == diet_under_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot5_5
+
+```
+
+#Change overtime plot for 50% depletion
+```{r}
+change_5_overtime_df <- function(species) {
+  x = seq(0,1, length.out = length(species))
+  color = viridis(n = length(species), option= "B")
+  par(mar = c(6,12,2,4))
+  specieyear5 = run5$annual_BB[1, species]
+  specieyearlast = run5$annual_BB[length(yearlist), species]
+  value <- (specieyearlast/specieyear5)
+  cbind(species, value)
+}
+
+#3.1: Commercial
+
+change_5_1_df<- change_5_overtime_df(commercial_predators)
+change_5_1_df <- as.data.frame(change_5_1_df)
+change_5_1 <- change_5_1_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_5_1_plot <- change_5_1 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_5_1_plot
+
+#3.2: Noncommercial
+
+change_5_2_df<- change_5_overtime_df(noncommerical_predators)
+change_5_2_df <- as.data.frame(change_5_2_df)
+change_5_2 <- change_5_2_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_5_2_plot <- change_5_2 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_5_2_plot
+
+#3.3: Mesopelagic predators
+
+change_5_3_df<- change_5_overtime_df(predators_mesopelagic)
+change_5_3_df <- as.data.frame(change_5_3_df)
+change_5_3 <- change_5_3_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use have to add in 0 for mesopelagics 
+change_5_3_plot <- change_5_3 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_5_3_plot
+
+#3.4: Diet over 0.05
+change_5_4_df<- change_5_overtime_df(diet_over_0.05)
+change_5_4_df <- as.data.frame(change_5_4_df)
+change_5_4 <- change_5_4_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_5_4_plot <- change_5_4 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_5_4_plot
+
+#3.5: Diet under 0.05 
+
+change_5_5_df<- change_5_overtime_df(diet_under_0.05)
+change_5_5_df <- as.data.frame(change_5_5_df)
+change_5_5 <- change_5_5_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use you need to add a value at 0 for mesopelagics! 
+change_5_5_plot <- change_5_5 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D") +
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_5_5_plot
 ```
 
 #DEPLETION LEVEL OF 25%
@@ -406,6 +695,7 @@ assessment
 }  
 rsim.plot(run6,all_species)  
 ```
+
 #Changing data set so we can change plotting
 ```{r}
 rsim.plot.fun <- function(Rsim.output, spname, indplot = F, ...){
@@ -421,7 +711,7 @@ rsim.plot.fun <- function(Rsim.output, spname, indplot = F, ...){
   rel.bio
 } 
 
-names_spp<- run0$params$spname[2:94]
+names_spp<- run6$params$spname[2:94]
 
 #Need to make z into data frame, before was matrix, names is for data frame not matrix
 #Ways to do this in tidy verse but this is quick fix
@@ -430,14 +720,127 @@ z_6<-as.data.frame(z_6)
 names(z_6) <- names_spp
 z_6$month <- 1:252
 
-
-#This vectors adds in the month
 data_6 <- gather(z_6, key = spp, value = biomass, -month )
-plot3 <- data_6 %>% filter(spp == c("Market squid", "Sardine", "Anchovy", "Herring", "Pacific Mackerel", "Sand lance", "Whitebait smelt", "Other smelt", "Saury")) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+
+plot6_1 <- data_6 %>% filter(spp == commercial_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
 theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno") +
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+plot6_1
+
+plot6_2 <- data_6 %>% filter(spp == noncommerical_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
 theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
-plot3
+plot6_2
+
+plot6_3 <- data_6 %>% filter(spp == predators_mesopelagic) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot6_3
+
+plot6_4 <- data_6 %>% filter(spp == diet_over_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot6_4
+
+plot6_5 <- data_6 %>% filter(spp == diet_under_0.05) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Biomass") + 
+theme_bw() + 
+scale_color_viridis(discrete = TRUE, option = "inferno")+
+theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Forage fish")
+plot6_5
+
+```
+
+#Change overtime plot for 25% depletion
+```{r}
+change_6_overtime_df <- function(species) {
+  x = seq(0,1, length.out = length(species))
+  color = viridis(n = length(species), option= "B")
+  par(mar = c(6,12,2,4))
+  specieyear6 = run6$annual_BB[1, species]
+  specieyearlast = run6$annual_BB[length(yearlist), species]
+  value <- (specieyearlast/specieyear6)
+  cbind(species, value)
+}
+
+#3.1: Commercial
+
+change_6_1_df<- change_6_overtime_df(commercial_predators)
+change_6_1_df <- as.data.frame(change_6_1_df)
+change_6_1 <- change_6_1_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_6_1_plot <- change_6_1 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_6_1_plot
+
+#3.2: Noncommercial
+
+change_6_2_df<- change_6_overtime_df(noncommerical_predators)
+change_6_2_df <- as.data.frame(change_6_2_df)
+change_6_2 <- change_6_2_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_6_2_plot <- change_6_2 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_6_2_plot
+
+#3.3: Mesopelagic predators
+
+change_6_3_df<- change_6_overtime_df(predators_mesopelagic)
+change_6_3_df <- as.data.frame(change_6_3_df)
+change_6_3 <- change_6_3_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use have to add in 0 for mesopelagics 
+change_6_3_plot <- change_6_3 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_6_3_plot
+
+#3.4: Diet over 0.05
+change_6_4_df<- change_6_overtime_df(diet_over_0.05)
+change_6_4_df <- as.data.frame(change_6_4_df)
+change_6_4 <- change_6_4_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+change_6_4_plot <- change_6_4 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D")+
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_6_4_plot
+
+#3.5: Diet under 0.05 
+
+change_6_5_df<- change_6_overtime_df(diet_under_0.05)
+change_6_5_df <- as.data.frame(change_6_5_df)
+change_6_5 <- change_6_5_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
+
+#If use you need to add a value at 0 for mesopelagics! 
+change_6_5_plot <- change_6_5 %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.2, 1.6) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + scale_color_viridis(discrete = TRUE, option = "D") +
+xlab("Proportion of original biomass") + ylab("Species") + theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+theme(plot.title= element_text(hjust=.5)) + 
+theme(legend.position= "none")  
+change_6_5_plot
 ```
 
 #DEPLETION LEVEL OF 0% 
@@ -448,51 +851,27 @@ run0 <- rsim.run(scene0, method='AB', years=yearlist)
 rsim.plot(run0,all_species)
 ```
 
-#Change over time plot! 
-```{r}
-library(viridis)
-# color = viridis(n = length(seabirds))
-# plot(run1$annual_BB[,1], ylab = "Predator Biomass", col = "White", xlab = "Time", ylim = c(0,0.004))
-# for(i in 1:length(seabirds)) {
-#   lines(run1$annual_BB[,seabirds[i]], col = color[i])
-# }
-# par(mar = c(4,4,2,6))
-# legend("topright",legend = seabirds, lty = 1, col = color,
-#        inset=c(-0.35,0),  xpd = TRUE, cex = 0.5)
-
-change_overtime_df <- function(species) {
-  x = seq(0,1, length.out = length(species))
-  color = viridis(n = length(species), option= "B")
-  par(mar = c(6,12,2,4))
-  specieyear3 = run3$annual_BB[1, species]
-  specieyearlast = run3$annual_BB[length(yearlist), species]
-  value <- (specieyearlast/specieyear3)
-  cbind(species, value)
-}
-
-change_overtime_plot(mammals)
-change_overtime_plot(pred_fish)
-change_overtime_plot(predators_mesopelagic)
-change_overtime_plot(commercial_predators)
-change_overtime_plot(noncommerical_predators)
-change_overtime_plot(diet_over_0.05)
-change_overtime_plot(diet_under_0.05)
-
-change_3_df<- change_overtime_df(diet_over_0.05)
-change_3_df <- as.data.frame(change_3_df)
-change_3_final <- change_3_df %>% mutate(value = round(as.numeric(paste(value)), 2)) %>% arrange(value)
-
-try <- change_3_final %>% ggplot(aes(x= value, y=species)) + geom_point(aes(col= species)) + xlim(0.8,1.2) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 1.2)
-try
-
-```
-
 #MODEL #2: INCORPORATING BYCATCH 
 
 #100% fishing, bycatch 20%
 ```{r}
-target_sp <- c("mesopelagics", "euphausiids", "small jellies", "large jellies", "carniv-zoops")
-target_F <- c(1.0, 0.2, 0.2, 0.2, 0.2)
+#Frate.table: creates table of fishing mortalities by species group and gear for an Rpath.sim object 
+temp = frate.table(scene0)
+temp
+#Calculate effort
+q <- c(0.5, 1.0, 2.0, 3.0)
+q
+F <- c(0.20, 0.20, 0.20, 0.20)
+F
+E <- F/q
+E
+adjust.fishing(scecne3.2, "Effort", sp, yr, value= effort)
+bycatch_sp <- ("euphausiids", "small jellies", "large jellies")
+bycatch_effort <- 
+
+
+target_sp <- "mesopelagics"
+target_F <- 1.0
 names(target_F) <- target_sp 
 
 library(data.table)
@@ -501,8 +880,8 @@ run3.2 <- rsim.run(scene3.2, method = 'AB', years=2000)
 for (yr in 2001:2020){
   # stock assessment based on current biomass * error
   # use this if including two species: 
-  assessment <- end_biomass(run3.2)[target_sp] * (runif(5) + 0.5)   
-#assessment <- end_biomass(run5)[target_sp] * (runif(length(target_sp)) + 0.5)
+  #assessment <- end_biomass(run3.2)[target_sp] * (runif(4) + 0.5)
+assessment <- end_biomass(run3.2)[target_sp] *(runif(length(target_sp)) + 0.5)
 assessment
   # convert target F * assessment to a total catch 
   catches <- target_F * assessment
@@ -542,8 +921,6 @@ change_overtime_plot(diet_under_0.05)
 
 
 ```
-
-
 
 #20% fishing, bycatch 4%
 ```{r}
